Responsive startup for navbar

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
       </div>
 
       <div class="comments-a">
-        <p>Pranisha is a true innovator in their field. Her deep understanding of design principles, combined with the ability to adapt to any challenge, makes her an invaluable asset. Working with her is always a seamless and inspiring experience.</p>
+        <p>Pranisha is a true innovator in their field. Her deep understanding of design principles, combined with the ability to adapt to any challenge, makes her an invaluable asset. Working with her is always a seamless and inspiring experience that enhance the overall aesthetic .</p>
       </div>
 
 
@@ -293,7 +293,7 @@
 
       <div class="comments-a">
         <p>Your design is stunning! The clean layout and navigation on your website make it a pleasure to explore. The choice of fonts and color scheme really enhance the overall aesthetic. It's clear that you have a
-          keen eye for detail and a strong sense of style.</p>
+          keen eye for detail and a strong sense of style that makes design appealing.</p>
       </div>
 
       <!-- footer in card -->
@@ -340,7 +340,7 @@
               <p>happy clients</p>
             </div>
             <div class="p-3 rounded text-center">
-              <h5>6 <sub>years</sub></h5>
+              <h5>6 years</h5>
               <p>experience</p>
             </div>
           </div>
@@ -349,11 +349,11 @@
         <!-- Second col-3 -->
         <div class="col-3">
           <div class="d-flex flex-column gap-4">
-            <div class="p-3 rounded text-center">
+            <div class="p-3 rounded text-center ">
               <h5>80 <sup>+</sup></h5>
               <p>successful projects</p>
             </div>
-            <div class="p-3 rounded text-center">
+            <div class="p-3 rounded text-center ">
               <h5>100 %</sub></h5>
               <p>passion</p>
             </div>
@@ -362,7 +362,7 @@
 
         <!-- col-6 -->
         <div class="col-6">
-          <div class="p-3 rounded text-left h-sm-100">
+          <div class="p-3 rounded text h-sm-100">
             <h4>Working at the intersection of <br> design and code.</h4>
             <p>With years of experience in web design, I live and breathe 
               good design and value the details that matter. Say goodbye to
@@ -465,7 +465,7 @@
 
 
   <div class="Questions">
-    <h2>Frequently Asked Questions</h2>
+    <h3>Frequently Asked Questions</h3>
   </div>
 
   <div class="FAQ">
