--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
 
   
   <!-- Roberto font -->
-
+<!-- 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Adamina&family=Inter:opsz,wght@14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Adamina&family=Inter:opsz,wght@14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> -->
 
   <!--   called adamina and inter font -->
-  
 
+  
+<!-- Font-awesome link -->
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> 
 
@@ -57,6 +58,7 @@
 <body>
 
 <!--   include navigation inside header tag -->
+   <header>
   <nav>
 
     <div class="navbar">
@@ -89,7 +91,7 @@
   </nav>
 
 
-
+   </header>
 
 
 
@@ -113,7 +115,7 @@
       <h6>Pranisha Neupane turns your designs into pixel-perfect <br>and easy-to-manage Webflow experiences.</h6>
     </div>
     <div class="image-gradient">
-      <img src="Images/best2.jpg" alt="My Profile">
+      <img src="Images/best.jpg" alt="My Profile">
     </div>
   </div>
 
@@ -192,10 +194,7 @@
       <div class="Card ">
         <div class="image ">
           <img src="Images/4pin.jpg" alt="cardimage4">
-          <!-- <div class="container1">
-            <h6><b> Simple Blog Design</b></h6>
-            <p>that uses vibrant colors</p>
-          </div> -->
+          
         </div>
 
         
@@ -258,7 +257,7 @@
       </div>
 
       <div class="comments-a">
-        <p>Pranisha is a master of precision and creativity.She have an exceptional ability to bring ideas to life with impeccable detail, ensuring every project exceeds expectations. A true professional and a pleasure to work with inspiring experience.
+        <p>Pranisha is a master of precision and creativity.She have an exceptional ability to bring ideas to life with impeccable detail, ensuring every project exceeds expectations. A true professional and a pleasure to work with inspiring experience for effectiveness .
 
         </p>
       </div>
@@ -393,8 +392,7 @@
         <h2>Project Request</h2>
 
         <p>The first step in our collaboration is the project request. This gives me an idea of what you're looking for
-          and helps me determine if I'm the right fit for your project. If so, we will schedule a video call to dive
-          deeper.</p>
+          and helps me determine if I'm the right fit for your project. If so, we will schedule a video call to dive deeper.</p>
       </div>
 
     </div>
@@ -411,8 +409,7 @@
         <h2>First Meeting</h2>
 
         <p>Trust is extremely important to me when working together. In our initial meeting, we get to know each other
-          and see if we are a good fit. We also talk about your goals & requirements, clarify questions and define the
-          next steps.</p>
+          and see if we are a good fit. We also talk about your goals & requirements, clarify questions to define the next steps.</p>
 
       </div>
     </div>
@@ -466,7 +463,7 @@
 
 
   <div class="Questions">
-    <h3>Frequently Asked Questions</h3>
+    <h4>Frequently Asked Questions</h4>
   </div>
 
   <div class="FAQ">
@@ -558,7 +555,7 @@
       <!-- Question 6 -->
       <div class="accordion-item">
         <h2 class="accordion-header" id="headingSix">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+          <button class="accordion-button collapsed " type="button" data-bs-toggle="collapse"
             data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
             Can you help with website redesigns?
           </button>
@@ -628,7 +625,7 @@
 
 
 
-
+<footer>
 
   <div class="last-footer">
 
@@ -655,7 +652,7 @@
     </div>
   </div>
 
-
+</footer>
 
 
 
